# zpg

./: README.md
THelp/: CMakeLists.txt
THelp/files/: Camera.cpp  Camera.h  FragmentShader.cpp  OpenGL.h  Shader.cpp  Shader.h  Source.cpp  VertexShader.cpp
cv/: CMakeLists.txt  main.cpp
cv/files/: ShaderLoader.cpp  ShaderLoader.h  camera.cpp  camera.h  fragmentShader.cpp  fragmentShader.h  main.cpp  shader.cpp  shader.h  vertexObject.cpp  vertexObject.h  vertexShader.cpp  vertexShader.h
cv/files/koule/: plain.h  sphere.h
cv/files/model/models/: bedna.h  sphere.h  suzi_flat.h  suzi_smooth.h  worker.h
help/: OpenGL.cpp  Source.cpp  VertexObject.cpp  VertexObject.h  VertexShader.cpp  VertexShader.h
hope/: CMakeLists.txt
hope/hovno/: main.cpp
navod/: CMakeLists.txt
navod/files/: main.cpp
pokus2/: CMakeLists.txt
ter-neupravene/: main.cpp  projekt1.sln
ter-neupravene/Libraries/assimp/lib/Win32/v140/Debug/: assimp-vc140-mt.lib
ter-neupravene/Libraries/assimp/lib/Win32/v140/Release/: assimp-vc140-mt.lib
ter-neupravene/Models/log/: low_poly_log.mtl
ter-neupravene/Models/stump/: Tree Stump.mtl
ter-neupravene/projekt1/: Application.h  Background.cpp  Background.h  Camera.cpp  FragmentShader.cpp  FragmentShader.h  Model.cpp  Model.h  ModelObject.cpp  Movement.cpp  Movement.h  Object.h  OpenGL.cpp  OpenGL.h  Renderer.cpp  SceneObjects.cpp  SceneObjects.h  Shader.h  Source.cpp  Texture.h  VertexObject.h  f_assimp.glsl  f_texture.glsl  plain.h  projekt1.vcxproj.filters  second.h  sphere.h  suzi_smooth.h  v_texture.glsl
ter-neupravene/projekt1/Debug/: vc141.idb
ter-neupravene/projekt1/Debug/projekt1.tlog/: CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.write.1.tlog  projekt1.lastbuildstate
ter-neupravene/projekt1/x64/Debug/: vc141.idb
ter-neupravene/sky/: skydome.blend
ter-neupravene/soil/lib/: SOIL.lib
tercino/: CMakeLists.txt
tercino/files/: main.cpp
tercino/files/Models/ghost/: Ghost.mtl
tercino/files/projekt1/: Application.cpp  Application.h  Background.cpp  Background.h  Camera.h  Create.h  EnumShaderType.h  Light.cpp  Light.h  Object.cpp  Renderer.h  SceneObjects.h  Shader.cpp  Shader.h  ShaderLoader.cpp  ShaderLoader.h  Texture.cpp  Texture.h  VertexObject.cpp  VertexObject.h  VertexStruct.h  f_lambert.glsl  f_phong.glsl  first.h  projekt1.vcxproj  suzi_flat.h  test.mtl  v_assimp.glsl  v_lambert.glsl  v_phong.glsl
tercino/files/projekt1/Debug/projekt1.tlog/: CL.command.1.tlog  link.read.1.tlog
tercino/files/projekt1/x64/Debug/projekt1.tlog/: projekt1.lastbuildstate
(+6 files in other folders)
